# isis3

./: .codecov.yml  .gitignore  5962.fix.md  CHANGELOG.md  CITATION.cff  README.md  buildCondaRelease.sh  code.json  environment.yml  environment_arm.yml  environment_arm_linux.yml  environment_gcc4.yml  towncrier.toml
.github/: cherry-pick-bulletin-template.xml  pr_label_checker.py  pull_request_template.md
.github/workflows/: dev-biweekly-release.yml  dev-weekly-release.yml  environment-file-check.yml  github-cherrypick.yml  github-release.yml  gitlab-lts.yml  install_isis_test.yml
changes/: +20260202150859.change.md  +20260219163621.misc.md  +20260227135253.add.md  +20260512124755.change.md  +20260608112107.fix.md  +6ljbbj.add.md  +fx-gtest-conversion.change.md  +fyct91.add.md  +handmos-gtest-conversion.change.md  +kuwahara-gtest-conversion.change.md  +lineeq-gtest-conversion.change.md  +makeflat-gtest-conversion.change.md  +maplab-gtest-conversion.change.md  +xxrvsq.add.md  +zgurup.fix.md  20260218101602.add.md  20260430091425.fix.md  3602.add.md  5193.change.md  5193.fix.md  5207.add.md  5291.fix.md  5317.add.md  5426.change.md  5478.fix.md  5545.add.md  5585.change.md  5591.add.md  5592.fix.md  5609.add.md  5611.add.md  5618.add.md  5629.fix.md  5662.add.md  5668.fix.md  5700.fix.md  5701.fix.md  5702.fix.md  5709.fix.md  5710.add.md  (+65 more)
core_recipe/: build.sh  meta.yaml
isis/: CMakeLists.txt  IsisPreferences  Makefile  TestPreferences
isis/appdata/import/: fileTemplate.tpl
isis/appdata/import/PDS3/: CassiniISS.tpl
isis/appdata/import/PDS4/: Chandrayaan2OHRC.tpl  Chandrayaan2TMC2.tpl  TGOCaSSIS.tpl
isis/appdata/serialnumbers/: Chandrayaan2Tmc2SerialNumber.trn  IdealIdealSerialNumber.trn  KploShadowCamCameraSerialNumber.trn
isis/appdata/translations/: Instruments.trn  MissionName2DataDir.trn
isis/cmake/: BuildDocs.cmake  CodeCoverage.cmake  FindAle.cmake  FindBulletFloat64.cmake  FindPCL.cmake  RunMakeFileTest.cmake  RunUnitTest.cmake  Utilities.cmake
isis/config/: rclone.conf
isis/make/: config.linux  isismake.tsts
isis/scripts/: compare_test_files.sh  compare_test_results.sh  downloadIsisData  generate_citation.py  install_isis.sh  isis3Startup.csh  isis3Startup.py  isis3Startup.sh  isisStartup.csh  isisStartup.sh  run_test.sh  textdiff.py
isis/src/apollo/apps/apollopaninit/: main.cpp
isis/src/apollo/objs/ApolloMetricCamera/: unitTest.cpp
isis/src/base/apps/appjit/: LineScanCameraRotation.cpp  LineScanCameraRotation.h
isis/src/base/apps/ascii2isis/: main.cpp
isis/src/base/apps/barscale/: main.cpp
isis/src/base/apps/blend/: blend.cpp  blend.h  main.cpp
isis/src/base/apps/cam2cam/: cam2cam.cpp  cam2cam.h
isis/src/base/apps/cam2map/: AspMapProjection.cpp  AspMapProjection.h  cam2map.cpp  cam2map.xml
isis/src/base/apps/caminfo/: caminfo.cpp
isis/src/base/apps/campt/: campt.cpp  campt.xml
isis/src/base/apps/camtrim/: main.cpp
isis/src/base/apps/cathist/: cathist.xml
isis/src/base/apps/catoriglab/: main.cpp
isis/src/base/apps/center/: main.cpp
isis/src/base/apps/crop/: crop.cpp  crop.xml  main.cpp
isis/src/base/apps/csminit/: csminit.cpp  csminit.xml
isis/src/base/apps/csv2table/: csv2table.cpp
isis/src/base/apps/cubeatt/: cubeatt.cpp
isis/src/base/apps/cubediff/: WriteTabular.cpp
isis/src/base/apps/cubeit/: cubeit.cpp
isis/src/core/: CMakeLists.txt  IsisPreferences  TestPreferences
isis/src/core/include/: Blob.h  PixelType.h  Preference.h  PvlContainer.h  PvlFormat.h  PvlKeyword.h  PvlObject.h  SpecialPixel.h
isis/src/core/src/: Blob.cpp  FileName.cpp  IException.cpp  IString.cpp  Preference.cpp  Pvl.cpp  PvlKeyword.cpp  PvlObject.cpp  Table.cpp
isis/src/core/swig/: CMakeLists.txt  isisblob.i  isiscore.i  isispvl.i
isis/src/core/swig/python/: CMakeLists.txt  setup.py.in
isis/src/core/tests/: BlobTests.cpp  CMakeLists.txt
isis/src/core/tests/unitTests/: CMakeLists.txt
isis/tests/: AbstractPlateTests.cpp  AlbedoAtmTests.cpp  AlbedoTests.cpp  AlphaCubeTests.cpp  Anisotropic1Tests.cpp  Anisotropic2Tests.cpp  AtmosModelTests.cpp  AutoseedTests.cpp  BlobTests.cpp  BufferManagerTests.cpp  BufferTests.cpp  BulletDskShapeTests.cpp  CMakeLists.txt  Cam2mapTests.cpp  CameraFactoryTests.cpp  CameraFixtures.cpp  CameraFixtures.h  CameraPointInfoTests.cpp  ClipperPushBroomCameraTests.cpp  ClipperWacFcCameraTests.cpp  ColorTests.cpp  CubeFixtures.cpp  CubeFixtures.h  CubeTests.cpp  FunctionalTestsApollopanstitcher.cpp  FunctionalTestsBandnorm.cpp  FunctionalTestsBlend.cpp  FunctionalTestsCam2cam.cpp  FunctionalTestsCamdev.cpp  FunctionalTestsCaminfo.cpp  FunctionalTestsCampt.cpp  FunctionalTestsCamrange.cpp  FunctionalTestsCamstats.cpp  FunctionalTestsChan1m32isis.cpp  FunctionalTestsCrop.cpp  FunctionalTestsCsminit.cpp  FunctionalTestsCtxcal.cpp  FunctionalTestsDsk2isis.cpp  FunctionalTestsEqualizer.cpp  FunctionalTestsFindfeatures.cpp  (+63 more)
isis/tests/data/cam2cam/: 20190509T180552S020_map_iofL2b.isd  20190509T180552S020_map_iofL2b.pvl
isis/tests/data/chandrayaan2/: ch2_ohr_nrp_20200827T0226453039_d_img_d18_crop.cub  ch2_tmc_ncf_20231101T0125121344_d_img_d18-crop.cub  ch2_tmc_ncn_20231030T1757326423_d_img_d18-crop.cub
isis/tests/data/defaultImage/: orbitalMarsFramer.json
isis/tests/data/dsk2isis/: test_occlusion_shape.bds  test_shape.bds
isis/tests/data/equalizer/: I00824006RDR.lev2.cub  I01523019RDR.lev2.cub  I02609002RDR.lev2.cub  MVA_2B2_01_02362S119E3542.lev2.cub  MVA_2B2_01_02362S125E3542.lev2.cub
isis/tests/data/footprintinit/: cross.isd  cross.pvl
isis/tests/data/osirisRexImages/: 20190509T174620S424_crop.cub  20190509T180552S020_DSK_reduced.cub  20190509T180552S020_crop.cub
isis/tests/data/overlapping_projected/: I00824006RDR.lev2.cub  I01086005_crop.cub  I01523019RDR.lev2.cub  I23851018_crop.cub
isis/tests/data/phocube/: 20190425T211232S312_map_iofL2pan-crop.cub
isis/tests/data/shadowcam/: M013049982SC.crop.cub  M013049982SE.2isis.cal.crop.cub  M013049982SE.2isis.crop.cub  M013049982SE.crop.cub
recipe/: build.sh  conda_build_config.yaml  meta.yaml
recipe/kakadu/: kakadu_7_9.zip.enc
(+616 files in other folders)
